@@ -26,7 +26,7 @@
         </item>
         <item>
             <key> <string>category</string> </key>
-            <value> <string>object_view</string> </value>
+            <value> <string>object_list</string> </value>
         </item>
         <item>
             <key> <string>condition</string> </key>
