@@ -26,7 +26,7 @@
         </item>
         <item>
             <key> <string>category</string> </key>
-            <value> <string>object_list</string> </value>
+            <value> <string>object_view</string> </value>
         </item>
         <item>
             <key> <string>condition</string> </key>
@@ -42,19 +42,19 @@
         </item>
         <item>
             <key> <string>id</string> </key>
-            <value> <string>view</string> </value>
+            <value> <string>module_view</string> </value>
         </item>
         <item>
             <key> <string>permissions</string> </key>
             <value>
               <tuple>
-                <string>View</string>
+                <string>Manage portal</string>
               </tuple>
             </value>
         </item>
         <item>
             <key> <string>priority</string> </key>
-            <value> <float>1.0</float> </value>
+            <value> <float>1.5</float> </value>
         </item>
         <item>
             <key> <string>title</string> </key>
@@ -81,7 +81,7 @@
       <dictionary>
         <item>
             <key> <string>text</string> </key>
-            <value> <string>string:${object_url}/PersonModule_viewPersonList</string> </value>
+            <value> <string>string:${object_url}/Folder_viewModule</string> </value>
         </item>
       </dictionary>
     </pickle>
